added Tests for find owners. closes #75